--- a/FileMoverKata.Console/FileMoverKata.Console.csproj
+++ b/FileMoverKata.Console/FileMoverKata.Console.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IDirectoryProvider.cs" />
+    <Compile Include="IFileProvider.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
